[package]
name = "lottery-eventbrite"
version = "0.1.0"
authors = ["fteychene <francois.teychene@gmail.com>"]

[dependencies]
error-chain = "0.11.0"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.1"
frunk = "0.1.34"

[dependencies.rocket_contrib]
version = "0.3.6"
features = ["json"]